<?xml version="1.0"?>
<package>
  <name>urdf_tests</name>
  <version>1.0.0</version>
  <description>The test bed for urdf stuff</description>

  <maintainer email="nichepah@gmail.com">Aneesh PA</maintainer>
  <license>MIT</license>

  <author email="nichepah@gmail.com">Aneesh PA</author> -->


  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>rviz</build_depend>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>tf</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>rviz</run_depend>

</package>
